--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/rahul-techsaraz/nodejs-bootcamp/issues"
   },
-  "homepage": "https://github.com/rahul-techsaraz/nodejs-bootcamp#readme"
+  "homepage": "https://github.com/rahul-techsaraz/nodejs-bootcamp#readme",
+  "dependencies": {
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0"
+  }
 }
