Connected the app with mongodb

--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 NODE_ENV=production
 USER=RAHULSINGH
 DB_PASSWORD=NwRKZUNB7NRTQfGf
+DB_CONNECTION_STRING=mongodb+srv://rahulsinghfiem:<PASSWORD>@cluster0.yley71w.mongodb.net/tours_app?retryWrites=true&w=majority&appName=Cluster0
