Added the authentication and authorization

--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV=production
 USER=RAHULSINGH
 DB_PASSWORD=NwRKZUNB7NRTQfGf
 DB_CONNECTION_STRING=mongodb+srv://rahulsinghfiem:<PASSWORD>@cluster0.yley71w.mongodb.net/tours_app?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=nodejs_bootcamp_authentication_and_authorization
+JWT_TOKEN_EXPIRE_IN= 90d
