--- a/config.env
+++ b/config.env
@@ -4,3 +4,7 @@ DB_PASSWORD=NwRKZUNB7NRTQfGf
 DB_CONNECTION_STRING=mongodb+srv://rahulsinghfiem:<PASSWORD>@cluster0.yley71w.mongodb.net/tours_app?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY=nodejs_bootcamp_authentication_and_authorization
 JWT_TOKEN_EXPIRE_IN= 90d
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USERNAME=49de2546bf323c
+EMAIL_PASSWORD=e676351dad7aaf
